--- a/scripts/configs/map_z05_cumulative.yaml
+++ b/scripts/configs/map_z05_cumulative.yaml
@@ -1,6 +1,6 @@
 redshift: 0.5
-filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
-# filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
+# filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
 load_field: true
 save_field: true
 rad_distance: 1.0 # in arcmin
