--- a/scripts/configs/star_fraction.yaml
+++ b/scripts/configs/star_fraction.yaml
@@ -6,12 +6,15 @@ save_field: false
 rad_distance: 1.0 # in arcmin
 mask_radii: 2.0 # Number of virial radii to mask out for haloes. In units of R200c
 
-plot_data: true
+load: false
+load_path: '../figures/2025-09/star_fraction_z0.5_star_fraction.yaml'
+
+plot_data: false
 data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
 data_label: 'Hadzhiyska 2024 pz1'
 
-fig_path: '../figures/2025-09/testSZ/'
-fig_name: 'CAP_profiles_yz_masked'
+fig_path: '../figures/2025-09/'
+fig_name: 'star_fraction'
 fig_type: 'png'
 plot_error_bars: true
 
@@ -49,7 +52,11 @@ simulations:
     sims:
       - name: 'TNG100-1'
         snapshot: 67
+      - name: 'TNG300-1'
+        snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
+      - name: 'Illustris-1'
+        snapshot: 103
       - name: 'Illustris-2'
         snapshot: 103
