--- a/scripts/configs/total_z05_DSigma.yaml
+++ b/scripts/configs/total_z05_DSigma.yaml
@@ -1,5 +1,5 @@
 redshift: 0.5
-# filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
 # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
 load_field: true
 save_field: true
