--- a/scripts/configs/tau_z05_DSigma.yaml
+++ b/scripts/configs/tau_z05_DSigma.yaml
@@ -4,13 +4,15 @@ filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
 load_field: true
 save_field: true
 rad_distance: 1.0 # in arcmin
+mask_haloes: false
+mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
 
 plot_data: false
 data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
 data_label: 'Hadzhiyska 2024 pz1'
 
-fig_path: '../figures/2025-09/testSZ/'
-fig_name: 'DSigma_3_profiles_yz'
+fig_path: '../figures/2025-10/testSZ/'
+fig_name: 'DSigma_profiles_yz'
 fig_type: 'png'
 plot_error_bars: true
 
@@ -19,7 +21,8 @@ plot_error_bars: true
 #   - 'tau'
   # - 'kSZ'
   # - 'tSZ'
-particle_type: 'tau'
+# particle_type: 'tau'
+particle_type: 'gas'
 projection: 'yz' # 'xy', 'xz', 'yz'
 
 
