--- a/scripts/configs/tau_z05_CAP.yaml
+++ b/scripts/configs/tau_z05_CAP.yaml
@@ -1,26 +1,24 @@
-redshift: 0.5
-filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
-# filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
-load_field: true
-save_field: true
-rad_distance: 1.0 # in arcmin
+stack:
+  redshift: 0.5
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
+  load_field: true
+  save_field: true
+  rad_distance: 1.0 # in arcmin
+  particle_type: 'tau'
+  projection: 'xy' # 'xy', 'xz', 'yz'
+  mask_haloes: false
+  mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
 
-plot_data: true
-data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-data_label: 'Hadzhiyska 2024 pz1'
+plot:
+  plot_data: true
+  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_label: 'Hadzhiyska 2024 pz1'
+  fig_path: '../figures/2025-10/testSZ/'
+  fig_name: 'CAP_profiles_xy'
+  fig_type: 'pdf'
+  plot_error_bars: true
 
-fig_path: '../figures/2025-10/testSZ/'
-fig_name: 'CAP_profiles_yz_new'
-fig_type: 'png'
-plot_error_bars: true
-
-# fraction_type: 'baryon' # gas or baryon
-# particle_types: 
-#   - 'tau'
-  # - 'kSZ'
-  # - 'tSZ'
-particle_type: 'tau'
-projection: 'yz' # 'xy', 'xz', 'yz'
 
 
 simulations:
@@ -47,6 +45,8 @@ simulations:
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
+        snapshot: 67
+      - name: 'TNG300-1'
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
