--- a/scripts/configs/tau_z05_CAP_masked.yaml
+++ b/scripts/configs/tau_z05_CAP_masked.yaml
@@ -1,27 +1,23 @@
-redshift: 0.5
-filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
-# filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
-load_field: false
-save_field: false
-rad_distance: 1.0 # in arcmin
-mask_radii: 2.0 # Number of virial radii to mask out for haloes. In units of R200c
+stack:
+  redshift: 0.5
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
+  load_field: false
+  save_field: false
+  rad_distance: 1.0 # in arcmin
+  mask_radii: 2.0 # Number of virial radii to mask out for haloes. In units of R200c
+  particle_type: 'tau'
+  projection: 'yz' # 'xy', 'xz', 'yz'
 
-plot_data: true
-data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-data_label: 'Hadzhiyska 2024 pz1'
+plot:
+  plot_data: true
+  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_label: 'Hadzhiyska 2024 pz1'
+  fig_path: '../figures/2025-09/testSZ/'
+  fig_name: 'CAP_profiles_yz_masked'
+  fig_type: 'png'
+  plot_error_bars: true
 
-fig_path: '../figures/2025-09/testSZ/'
-fig_name: 'CAP_profiles_yz_masked'
-fig_type: 'png'
-plot_error_bars: true
-
-# fraction_type: 'baryon' # gas or baryon
-# particle_types: 
-#   - 'tau'
-  # - 'kSZ'
-  # - 'tSZ'
-particle_type: 'tau'
-projection: 'yz' # 'xy', 'xz', 'yz'
 
 
 simulations:
