--- a/scripts/configs/tau_z05_DSigma.yaml
+++ b/scripts/configs/tau_z05_DSigma.yaml
@@ -1,29 +1,23 @@
-redshift: 0.5
-filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
-# filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
-load_field: true
-save_field: true
-rad_distance: 1.0 # in arcmin
-mask_haloes: false
-mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
+stack:
+  redshift: 0.5
+  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
+  # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
+  load_field: true
+  save_field: true
+  rad_distance: 1.0 # in arcmin
+  mask_haloes: false
+  mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
+  particle_type: 'gas'
+  projection: 'yz' # 'xy', 'xz', 'yz'
 
-plot_data: false
-data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-data_label: 'Hadzhiyska 2024 pz1'
-
-fig_path: '../figures/2025-10/testSZ/'
-fig_name: 'DSigma_profiles_yz'
-fig_type: 'png'
-plot_error_bars: true
-
-# fraction_type: 'baryon' # gas or baryon
-# particle_types: 
-#   - 'tau'
-  # - 'kSZ'
-  # - 'tSZ'
-# particle_type: 'tau'
-particle_type: 'gas'
-projection: 'yz' # 'xy', 'xz', 'yz'
+plot:
+  plot_data: false
+  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_label: 'Hadzhiyska 2024 pz1'
+  fig_path: '../figures/2025-10/testSZ/'
+  fig_name: 'DSigma_profiles_yz'
+  fig_type: 'png'
+  plot_error_bars: true
 
 
 simulations:
