--- a/scripts/configs/tau_z05_CAP.yaml
+++ b/scripts/configs/tau_z05_CAP.yaml
@@ -3,19 +3,20 @@ stack:
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
-  save_field: true
+  save_field: false
   rad_distance: 1.0 # in arcmin
   particle_type: 'tau'
   projection: 'xy' # 'xy', 'xz', 'yz'
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
+  pixel_size: 0.5 # in arcmin
 
 plot:
   plot_data: true
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/testSZ/'
-  fig_name: 'CAP_profiles_xy'
+  fig_path: '../figures/2025-10/good/'
+  fig_name: 'profiles_xy'
   fig_type: 'pdf'
   plot_error_bars: true
 
