--- a/scripts/configs/tau_z05_CAP.yaml
+++ b/scripts/configs/tau_z05_CAP.yaml
@@ -15,7 +15,7 @@ plot:
   plot_data: true
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/good/'
+  fig_path: '../figures/2025-10/test2/'
   fig_name: 'profiles_xy'
   fig_type: 'pdf'
   plot_error_bars: true
