--- a/scripts/configs/tau_z05_CAP_masked.yaml
+++ b/scripts/configs/tau_z05_CAP_masked.yaml
@@ -3,18 +3,21 @@ stack:
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: false
-  save_field: false
+  save_field: true
   rad_distance: 1.0 # in arcmin
-  mask_radii: 2.0 # Number of virial radii to mask out for haloes. In units of R200c
   particle_type: 'tau'
   projection: 'yz' # 'xy', 'xz', 'yz'
+  mask_haloes: false
+  mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
+  pixel_size: 0.5 # in arcmin
 
 plot:
   plot_data: true
-  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-  data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-09/testSZ/'
-  fig_name: 'CAP_profiles_yz_masked'
+  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_path: '../data/Fig2_sim.npz'
+  data_label: 'Hadzhiyska 2024'
+  fig_path: '../figures/2025-10/testSZ/'
+  fig_name: 'profiles_yz_masked'
   fig_type: 'png'
   plot_error_bars: true
 
@@ -44,6 +47,8 @@ simulations:
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
+        snapshot: 67
+      - name: 'TNG300-1'
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
