--- a/scripts/configs/tSZ_z05_CAP_masked.yaml
+++ b/scripts/configs/tSZ_z05_CAP_masked.yaml
@@ -1,23 +1,27 @@
 stack:
   redshift: 0.5
-  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
+  particle_type: 'tSZ'
+  projection: 'yz' # 'xy', 'xz', 'yz'
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  particle_type: 'gas'
-  projection: 'yz' # 'xy', 'xz', 'yz'
+  pixel_size: 0.5 # in arcmin
 
 plot:
-  plot_data: false
-  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-  data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/test2/'
-  fig_name: 'DSigma_profiles_yz'
+  plot_data: true
+  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_path: '../data/fig4.csv'
+  data_label: 'Liu 2025 pz1 (ACT DR6 Fiducial)'
+  fig_path: '../figures/2025-10/compare/'
+  fig_name: 'profiles_yz_masked'
   fig_type: 'png'
   plot_error_bars: true
+  yscale: 'linear'
+
 
 
 simulations:
@@ -44,6 +48,8 @@ simulations:
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
+        snapshot: 67
+      - name: 'TNG300-1'
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
