--- a/scripts/configs/tau_z05_CAP_masked.yaml
+++ b/scripts/configs/tau_z05_CAP_masked.yaml
@@ -2,7 +2,7 @@ stack:
   redshift: 0.5
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
-  load_field: false
+  load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
   particle_type: 'tau'
@@ -16,7 +16,7 @@ plot:
   # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_path: '../data/Fig2_sim.npz'
   data_label: 'Hadzhiyska 2024'
-  fig_path: '../figures/2025-10/testSZ/'
+  fig_path: '../figures/2025-10/compare/'
   fig_name: 'profiles_yz_masked'
   fig_type: 'png'
   plot_error_bars: true
