minor bugfix for dsigma, added profile ratio scripts

--- a/scripts/configs/kSZ_ratio_z05.yaml
+++ b/scripts/configs/kSZ_ratio_z05.yaml
@@ -1,27 +1,24 @@
 stack:
   redshift: 0.5
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
   # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
-  particle_type: 'tau'
-  projection: 'yz' # 'xy', 'xz', 'yz'
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
+  particle_type: 'tau'
+  projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
 
 plot:
-  plot_data: true
-  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_sigmaz0.0500_dr6_corr_pzbin1.npz'
-  data_path: '../data/Fig2_sim.npz'
-  # data_label: 'Hadzhiyska 2024 pz1'
-  data_label: 'Hadzhiyska 2024'
+  plot_data: false
+  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/2025-10/test3/'
-  fig_name: 'profiles_yz'
+  fig_name: 'ratio_profiles_yz'
   fig_type: 'png'
   plot_error_bars: true
-
 
 
 simulations:
@@ -48,8 +45,6 @@ simulations:
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
-        snapshot: 67
-      - name: 'TNG300-1'
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
