--- a/scripts/configs/kSZ_ratio_z05.yaml
+++ b/scripts/configs/kSZ_ratio_z05.yaml
@@ -1,7 +1,6 @@
 stack:
   redshift: 0.5
-  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
-  # filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
@@ -10,13 +9,15 @@ stack:
   particle_type: 'tau'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
+  filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
+  particle_type_2: 'total'
 
 plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/test3/'
-  fig_name: 'ratio_profiles_yz'
+  fig_path: '../figures/2025-10/10-23/'
+  fig_name: 'ratio_yz'
   fig_type: 'png'
   plot_error_bars: true
 
