--- a/scripts/configs/mass_ratio_z05.yaml
+++ b/scripts/configs/mass_ratio_z05.yaml
@@ -6,10 +6,10 @@ stack:
   rad_distance: 1.0 # in arcmin
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  particle_type: 'gas'
+  particle_type: 'baryon'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
-  filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   particle_type_2: 'total'
 
 
@@ -17,7 +17,7 @@ plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/10-23/'
+  fig_path: '../figures/2025-10/10-27/'
   fig_name: 'ratios_yz'
   fig_type: 'png'
   plot_error_bars: true
