--- a/scripts/configs/tau_z05_CAP_masked.yaml
+++ b/scripts/configs/tau_z05_CAP_masked.yaml
@@ -16,7 +16,7 @@ plot:
   # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_path: '../data/Fig2_sim.npz'
   data_label: 'Hadzhiyska 2024'
-  fig_path: '../figures/2025-10/compare/'
+  fig_path: '../figures/2025-10/10-24/'
   fig_name: 'profiles_xy_masked'
   fig_type: 'png'
   plot_error_bars: true
