--- a/scripts/configs/star_fraction.yaml
+++ b/scripts/configs/star_fraction.yaml
@@ -6,14 +6,14 @@ save_field: false
 rad_distance: 1.0 # in arcmin
 mask_radii: 2.0 # Number of virial radii to mask out for haloes. In units of R200c
 
-load: true
+load: false
 load_path: '../figures/2025-09/star_fraction_z0.5_star_fraction.yaml'
 
 plot_data: false
 data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
 data_label: 'Hadzhiyska 2024 pz1'
 
-fig_path: '../figures/2025-09/'
+fig_path: '../figures/2025-10/10-29/'
 fig_name: 'star_fraction'
 fig_type: 'png'
 plot_error_bars: true
