added subtract_mean option to stacker, new plotting scripts

--- a/scripts/configs/mass_ratio_z05.yaml
+++ b/scripts/configs/mass_ratio_z05.yaml
@@ -1,6 +1,6 @@
 stack:
   redshift: 0.5
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
@@ -9,16 +9,17 @@ stack:
   particle_type: 'baryon'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
-  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type_2: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma
   particle_type_2: 'total'
+  subtract_mean: false
 
 
 plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/10-29/'
-  fig_name: 'ratios_yz'
+  fig_path: '../figures/2025-11/11-03/'
+  fig_name: 'ratios_yz2'
   fig_type: 'png'
   plot_error_bars: true
 
@@ -47,6 +48,8 @@ simulations:
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
+        snapshot: 67
+      - name: 'TNG300-1'
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
