--- a/scripts/configs/3D_mass_ratio_z05.yaml
+++ b/scripts/configs/3D_mass_ratio_z05.yaml
@@ -22,9 +22,9 @@ plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-11/11-03/'
+  fig_path: '../figures/2025-11/'
   fig_name: 'ratios_yz'
-  fig_type: 'png'
+  fig_type: 'pdf'
   plot_error_bars: true
 
 
