--- a/scripts/configs/kSZ_ratio_z05.yaml
+++ b/scripts/configs/kSZ_ratio_z05.yaml
@@ -1,6 +1,6 @@
 stack:
   redshift: 0.5
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
@@ -16,7 +16,7 @@ plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-10/10-23/'
+  fig_path: '../figures/2025-11/'
   fig_name: 'ratio_yz'
   fig_type: 'png'
   plot_error_bars: true
