New 3D remainder code, some changes to the profiles, added config for z=0

--- a/scripts/configs/3D_masked_profiles_z00.yaml
+++ b/scripts/configs/3D_masked_profiles_z00.yaml
@@ -1,6 +1,5 @@
 stack:
-  redshift: 0.5
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
+  redshift: 0.0
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
@@ -9,14 +8,14 @@ stack:
   particle_type: 'gas'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
-  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   particle_type_2: 'total'
+  subtract_mean: false
   n_pixels: 1000
-  min_radius: 200.0 # in comoving kpc/h
-  max_radius: 4000.0 # in comoving kpc/h
-  num_radii: 11
-  subtract_mean: true
-
+  halo_mass_avg: 1.6595869074377206e+13
+  halo_mass_upper: 500000000000000.
+  min_radius: 1.0
+  max_radius: 6.0
+  num_radii: 9
 
 plot:
   plot_data: false
@@ -24,40 +23,39 @@ plot:
   data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/2025-11/'
   fig_name: 'ratios_yz'
-  fig_type: 'png'
+  fig_type: 'pdf'
   plot_error_bars: true
-
 
 simulations:
   - sim_type: 'SIMBA'
     sims:
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50noagn'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nox'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nojet'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nofb'
       - name: 'm100n1024'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50'
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
-        snapshot: 67
-      - name: 'TNG300-1'
-        snapshot: 67
+        snapshot: 99
+      # - name: 'TNG300-1'
+      #   snapshot: 99
       - name: 'TNG300-2'
-        snapshot: 67
+        snapshot: 99
       - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+        snapshot: 135
+      # - name: 'Illustris-2'
+      #   snapshot: 135
