--- a/scripts/configs/3D_mass_ratio_z00.yaml
+++ b/scripts/configs/3D_mass_ratio_z00.yaml
@@ -1,5 +1,5 @@
 stack:
-  redshift: 0.5
+  redshift: 0.0
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
   load_field: true
   save_field: true
@@ -35,29 +35,29 @@ simulations:
         snapshot: 125
         feedback: 's50'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50noagn'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nox'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nojet'
       - name: 'm50n512'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50nofb'
       - name: 'm100n1024'
-        snapshot: 125
+        snapshot: 151
         feedback: 's50'
   - sim_type: 'IllustrisTNG'
     sims:
       - name: 'TNG100-1'
-        snapshot: 67
-      - name: 'TNG300-1'
-        snapshot: 67
+        snapshot: 99
+      # - name: 'TNG300-1'
+      #   snapshot: 99
       - name: 'TNG300-2'
-        snapshot: 67
+        snapshot: 99
       - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+        snapshot: 135
+      # - name: 'Illustris-2'
+      #   snapshot: 135
