--- a/scripts/configs/mass_ratio_z05.yaml
+++ b/scripts/configs/mass_ratio_z05.yaml
@@ -1,12 +1,12 @@
 stack:
   redshift: 0.5
-  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
+  filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma'
   load_field: true
   save_field: true
   rad_distance: 1.0 # in arcmin
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  particle_type: 'total'
+  particle_type: 'gas'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
   filter_type_2: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma'
@@ -20,7 +20,7 @@ plot:
   data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/2025-11/'
   fig_name: 'ratios_yz'
-  fig_type: 'pdf'
+  fig_type: 'png'
   plot_error_bars: true
 
 
@@ -53,6 +53,8 @@ simulations:
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
+      # - name: 'TNG50-3'
+      #   snapshot: 67
       - name: 'Illustris-1'
         snapshot: 103
       - name: 'Illustris-2'
