--- a/scripts/configs/mass_ratio_z00_field.yaml
+++ b/scripts/configs/mass_ratio_z00_field.yaml
@@ -1,24 +1,34 @@
 stack:
   redshift: 0.0
-  filter_type: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma'
   load_field: true
   save_field: true
-  rad_distance: 1.0 # in arcmin
+
+  stack_field: true # If false, stacks maps instead of fields
+  rad_distance: 1000.0 # in arcmin, or comoving kpc/h if stack_field is true
+  min_radius: 0.5 # in arcmin or comoving kpc/h if stack_field is true
+  max_radius: 4.0 # in arcmin or comoving kpc/h if stack_field is true
+  num_radii: 11 # Number of radial bins between min_radius and max_radius
+ 
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  particle_type: 'gas'
+
+  pixel_size: 0.5 # in arcmin if stack_field is false
+  n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
-  pixel_size: 0.5 # in arcmin
-  filter_type_2: 'cumulative' # Options: 'CAP', 'cumulative', 'DSigma'
+
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
+  particle_type: 'gas'
+  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
   particle_type_2: 'total'
-  subtract_mean: false
+
+  subtract_mean: false # Whether to subtract the mean of the field before stacking
 
 
 plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-11/'
+  fig_path: '../figures/2025-12/'
   fig_name: 'ratios_yz'
   fig_type: 'png'
   plot_error_bars: true
