--- a/scripts/configs/mass_ratio_z05_field.yaml
+++ b/scripts/configs/mass_ratio_z05_field.yaml
@@ -30,7 +30,7 @@ plot:
   data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/2025-12/'
   fig_name: 'ratios_yz'
-  fig_type: 'png'
+  fig_type: 'pdf'
   plot_error_bars: true
 
 
