--- a/scripts/configs/tau_profiles_z05.yaml
+++ b/scripts/configs/tau_profiles_z05.yaml
@@ -16,10 +16,10 @@ stack:
   n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
 
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
+  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
   particle_type: 'tau'
-  # filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
-  # particle_type_2: 'total'
+  filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
+  particle_type_2: 'total'
 
   subtract_mean: false # Whether to subtract the mean of the field before stacking
 
@@ -28,7 +28,7 @@ plot:
   plot_data: true
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-12/'
+  fig_path: '../figures/'
   fig_name: 'yz'
   fig_type: 'png'
   plot_error_bars: true
