--- a/scripts/configs/ionized_gas_profiles_z05.yaml
+++ b/scripts/configs/ionized_gas_profiles_z05.yaml
@@ -3,6 +3,7 @@ stack:
   load_field: true
   save_field: true
 
+  stack_field: false # If false, stacks maps instead of fields
   rad_distance: 1.0 # in arcmin, or comoving kpc/h if stack_field is true
   min_radius: 1.0 # in rad_distance units
   max_radius: 10.0 # in rad_distance units
@@ -14,16 +15,14 @@ stack:
   pixel_size: 0.5 # in arcmin if stack_field is false
   n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
-
+  
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
   particle_type: 'tau' #'tau'
-  stack_field: false # If false, stacks maps instead of fields
   convert_particle_type: false # if true, converts to kSZ units from mass units
 
   filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
   particle_type_2: 'ionized_gas'
-  stack_field_2: false # If false, stacks maps instead of fields
-  convert_particle_type_2: false # if true, converts to kSZ units from mass units
+  convert_particle_type_2: true # if true, converts to kSZ units from mass units
 
   subtract_mean: false # Whether to subtract the mean of the field before stacking
 
@@ -67,8 +66,6 @@ simulations:
         snapshot: 67
       - name: 'TNG300-2'
         snapshot: 67
-      # - name: 'TNG50-3'
-      #   snapshot: 67
       - name: 'Illustris-1'
         snapshot: 103
       - name: 'Illustris-2'
