--- a/scripts/configs/mass_ratio_data_z05.yaml
+++ b/scripts/configs/mass_ratio_data_z05.yaml
@@ -3,9 +3,10 @@ stack:
   load_field: true
   save_field: true
 
+  stack_field: false # If false, stacks maps instead of fields
   rad_distance: 1.0 # in arcmin, or comoving kpc/h if stack_field is true
   min_radius: 1.0 # in rad_distance units
-  max_radius: 10.0 # in rad_distance units
+  max_radius: 6.0 # in rad_distance units
   num_radii: 11 # Number of radial bins between min_radius and max_radius
   
   mask_haloes: false
@@ -15,25 +16,22 @@ stack:
   n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
 
-  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type: 'tau' #'tau'
-  stack_field: false # If false, stacks maps instead of fields
-  convert_particle_type: false # if true, converts to kSZ units from mass units
-
-  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type_2: 'ionized_gas'
-  stack_field_2: false # If false, stacks maps instead of fields
-  convert_particle_type_2: false # if true, converts to kSZ units from mass units
+  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
+  particle_type: 'ionized_gas'
+  filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
+  particle_type_2: 'total'
 
   subtract_mean: false # Whether to subtract the mean of the field before stacking
 
 
 plot:
-  plot_data: false
-  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-  data_label: 'Hadzhiyska 2024 pz1'
+  plot_data: true
+  # data_path: '/pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/specY3_hsc/ratio_specY3_hsc_zbin1_DSigma_ksz_uniformweight.npz'
+  data_path: /pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/spec_Y3/ratio_LRG_full_no_src_with_cluster_mask_zbin1_DSigma_ksz_ggl.npz
+  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  # data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
-  fig_name: 'yz'
+  fig_name: 'ratios_yz_data'
   fig_type: 'png'
   plot_error_bars: true
 
