--- a/scripts/configs/mass_ratio_z05.yaml
+++ b/scripts/configs/mass_ratio_z05.yaml
@@ -16,9 +16,9 @@ stack:
   n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
 
-  filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type: 'tau'
-  filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
+  filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
+  particle_type: 'ionized_gas'
+  filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
   particle_type_2: 'total'
 
   subtract_mean: false # Whether to subtract the mean of the field before stacking
@@ -26,8 +26,9 @@ stack:
 
 plot:
   plot_data: false
-  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-  data_label: 'Hadzhiyska 2024 pz1'
+  data_path: '/pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/specY3_hsc/ratio_specY3_hsc_zbin1_DSigma_ksz_uniformweight.npz'
+  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  # data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
   fig_name: 'ratios_yz'
   fig_type: 'png'
@@ -65,7 +66,7 @@ simulations:
         snapshot: 67
       # - name: 'TNG50-3'
       #   snapshot: 67
-      # - name: 'Illustris-1'
-      #   snapshot: 103
+      - name: 'Illustris-1'
+        snapshot: 103
       - name: 'Illustris-2'
         snapshot: 103
